# ChangeLog for dev-cpp/glibmm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.151 2010/08/05 16:34:00 jer Exp $

  05 Aug 2010; Jeroen Roovers <jer@gentoo.org> glibmm-2.24.2.ebuild:
  Stable for HPPA (bug #324077).

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org> glibmm-2.24.2.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> glibmm-2.24.2.ebuild:
  amd64 stable, bug 324077

*glibmm-2.24.2 (17 Jun 2010)

  17 Jun 2010; Pacho Ramos <pacho@gentoo.org> +glibmm-2.24.2.ebuild:
  Version bump: adds API for the new Network I/O classes that were added in
  glib 2.22.x, adds the BalancedTree class (wrapping GTree) and other new
  additions. Also contains several bugfixes.

  31 May 2010; Gilles Dartiguelongue <eva@gentoo.org> -glibmm-2.16.4.ebuild,
  -glibmm-2.20.1.ebuild:
  Clean up old revisions.

  24 May 2010; Jonathan Callen <abcd@gentoo.org> glibmm-2.22.2.ebuild:
  Bump to EAPI=3, add prefix keywords

  11 May 2010; Brent Baude <ranger@gentoo.org> glibmm-2.22.1.ebuild:
  Marking glibmm-2.22.1 ppc64 for bug 304777

  07 May 2010; Jeroen Roovers <jer@gentoo.org> glibmm-2.22.1.ebuild:
  Stable for HPPA (bug #304777).

  07 Apr 2010; Brent Baude <ranger@gentoo.org> glibmm-2.22.1.ebuild:
  Marking glibmm-2.22.1 ppc stable for bug 304777

*glibmm-2.22.2 (26 Mar 2010)

  26 Mar 2010; Pacho Ramos <pacho@gentoo.org> +glibmm-2.22.2.ebuild:
  Version bump finally fixing bug 295726 and upstream bug 609552

  24 Mar 2010; Raúl Porcel <armin76@gentoo.org> glibmm-2.22.1.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #304777

  06 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> glibmm-2.22.1.ebuild:
  x86 stable wrt bug #304777

  06 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> glibmm-2.22.1.ebuild:
  amd64 stable wrt #304777

  05 Mar 2010; Pacho Ramos <pacho@gentoo.org> glibmm-2.22.1.ebuild: